}
\item{\code{set_data_table(dt)}}{
Sets the \code{History} log with the data in \code{data.table} \code{dt}.
}
\item{\code{clear_data_table()}}{
Clears the \code{History} log.
}
\item{\code{save_csv(filename = NA, context_to_columns = FALSE)}}{
Saves History data to csv file. When context_to_columns is TRUE, the "context" column will
be split over multiple columns X1 to X...
}
\item{\code{delete_empty_rows()}}{
Deletes all empty rows in the \code{History} log and re-indexes the \code{t} column grouped
by agent and simulation.
}
\item{\code{reindex(truncate = TRUE)}}{
Removes empty rows from the \code{History} log, reindexes the \code{t} column, and,
if \code{truncate} is \code{TRUE}, truncates the resulting data to the shortest simulation
grouped by agent and simulation.
}
\item{\code{reindex(truncate = TRUE)}}{
Removes empty rows from the \code{History} log, reindexes the \code{t} column, and,
if \code{truncate} is \code{TRUE}, truncates the resulting data to the shortest simulation
grouped by agent and simulation.
}
\item{\code{print_data()}}{
Prints a summary of the \code{History} log.
}
\item{\code{data}}{
Active binding, read access to History's internal data.table.
}
\item{\code{cumulative}}{
Active binding, read access to cumulative data by name through $ accessor.
}
\item{\code{meta}}{
Active binding, read access to meta data by name through $ accessor.
}
}
}

\examples{
\dontrun{

  policy    <- EpsilonGreedyPolicy$new(epsilon = 0.1)
  bandit    <- BasicBernoulliBandit$new(weights = c(0.6, 0.1, 0.1))

  agent     <- Agent$new(policy, bandit, name = "E.G.", sparse = 0.5)

  history   <- Simulator$new(agents = agent,
                             horizon = 10,
                             simulations = 10)$run()

  summary(history)

  plot(history)

  dt <- history$get_data_table()

  df <- history$get_data_frame()

  print(history$cumulative$E.G.$cum_regret_sd)

  print(history$cumulative$E.G.$cum_regret)

}

}
\seealso{