@@ -609,4 +609,3 @@ prob_winner <- function(post){
   w = table(factor(max.col(post), levels = 1:k))
   return(w/sum(w))
 }
-
