@@ -87,6 +87,13 @@ Clears the \code{History} log.
 Saves History data to csv file. When context_to_columns is TRUE, the "context" column will
 be split over multiple columns X1 to X...
 }
+\item{\code{extract_theta(limit_agents, parameter, arm, tail = NULL)}}{
+Extract theta parameter from internal theta list for \code{limit_agents},
+where \code{parameter} sets the to be retrieved parameter or vector of parameters in theta,
+\code{arm} is the relevant integer index of the arm or vector of arms of interest, and the
+optional \code{tail} selects the last elements in the list.
+Returns a vector, matrix or array with the selected theta values.
+}
 \item{\code{delete_empty_rows()}}{
 Deletes all empty rows in the \code{History} log and re-indexes the \code{t} column grouped
 by agent and simulation.
